--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -1,16 +1,28 @@
-stages: 
-- test
+pipeline {
+    agent any
 
-postman_tests: 
-stage: test 
-image: 
-name: postman/newman_alpine33
-entrypoint: [""]
-script: 
--npm install -g newman-reporter-html
--newman run a_TrelloAPI.postman_collection --reporters cli-html --reporter-html-export report.html
+    stages {
+        stage('Running collection') {
+            steps {
+                sh 'newman --version'
+                sh 'newman run a_TrelloAPI.postman_collection.json --disable-unicode --reporters cli,htmlextra,junit --reporter-htmlextra-export newman/report.html --reporter-junit-export newman/report.xml'
+            }
+        }
+    }
+        post {
+        always {
+            publishHTML target: [
+                reportName: 'Newman',
+                reportDir: 'newman',
+                reportFiles: 'report.html',
+                reportTitles: 'Postman API tests',
+                keepAll: true,
+                alwaysLinkToLastBuild: true,
+                allowMissing: false
+            ]
+           junit skipPublishingChecks: true, testResults: 'newman/report.xml'
 
-artifacts: 
-when: always
-paths:
-- report.html
+        }
+    }
+    
+}
